test class no body check

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       "activitybar": [
         {
           "id": "testExplorerContainer",
-          "title": "Salesforce Test Explorer",
+          "title": "Visbal Test",
           "icon": "$(beaker)"
         }
       ]
