--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,25 @@
 .vscode/**
 .vscode-test/**
 src/**
+out/test/**
+test/**
 .gitignore
-tsconfig.json
+.yarnrc
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/.eslintrc.json
 **/*.map
-**/*.ts 
+**/*.ts
+node_modules/**
+.github/**
+.git/**
+package-lock.json
+yarn.lock
+webpack.config.js
+.eslintignore
+.eslintrc.js
+.prettierrc
+.prettierignore
+coverage/**
+.nyc_output/**
+**/*.vsix 
