--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "visbal-ext",
   "displayName": "Visbal Extension",
-  "version": "0.0.1",
-  "description": "A basic extension for Cursor with find functionality",
+  "version": "0.1.0",
+  "publisher": "visbal",
+  "description": "A Visual Studio Code extension for Salesforce development with enhanced test execution and log analysis capabilities",
+  "author": {
+    "name": "Visbal"
+  },
+  "categories": [
+    "Other",
+    "Testing",
+    "Debuggers"
+  ],
+  "keywords": [
+    "salesforce",
+    "apex",
+    "testing",
+    "logs",
+    "debug"
+  ],
   "main": "dist/extension.js",
   "repository": {
     "type": "git",
@@ -11,7 +27,10 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "package": "vsce package"
+    "package": "vsce package",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js",
+    "prepackage": "npm run build"
   },
   "engines": {
     "vscode": "^1.63.0",
@@ -23,7 +42,9 @@
     "onCommand:visbal-ext.showLogSummary",
     "onView:visbalLogView",
     "onView:testClassExplorerView",
-    "onLanguage:log"
+    "onLanguage:log",
+    "workspaceContains:**/.sfdx/sfdx-config.json",
+    "workspaceContains:**/sfdx-project.json"
   ],
   "contributes": {
     "commands": [
@@ -188,11 +209,16 @@
   "devDependencies": {
     "@types/node": "^16.11.7",
     "@types/vscode": "^1.63.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "typescript": "^4.5.5",
     "vsce": "^2.7.0"
   },
   "dependencies": {
+    "@salesforce/core": "^5.3.20",
     "@vscode/codicons": "^0.0.36",
-    "axios": "^1.8.3"
+    "axios": "^1.8.3",
+    "jsforce": "^1.11.1"
   }
 }
