--- a/package.json
+++ b/package.json
@@ -47,13 +47,7 @@
   ],
   "contributes": {
     "viewsContainers": {
-      "debug": [
-        {
-          "id": "visbal-debug",
-          "title": "Visbal Debug",
-          "icon": "$(bug)"
-        }
-      ],
+      "debug": [],
       "panel": [
         {
           "id": "visbal-log-container",
@@ -76,11 +70,6 @@
           "id": "testExplorerContainer",
           "title": "Visbal Test",
           "icon": "$(beaker)"
-        },
-        {
-          "id": "visbal-debug",
-          "title": "Visbal Debug",
-          "icon": "$(debug-alt)"
         }
       ]
     },
@@ -88,43 +77,9 @@
       "debug": [
         {
           "type": "webview",
-          "id": "visbal-debug-console",
-          "name": "Debug Console",
-          "when": "inDebugMode"
-        },
-        {
-          "type": "webview",
           "id": "visbal-test-results",
           "name": "Test Results",
           "when": "inDebugMode"
-        }
-      ],
-      "visbal-debug": [
-        {
-          "type": "webview",
-          "id": "visbal-ports",
-          "name": "Ports"
-        },
-        {
-          "type": "webview",
-          "id": "visbal-gitLens",
-          "name": "GitLens"
-        },
-        {
-          "id": "logTreeView",
-          "name": "Log Tree",
-          "type": "tree",
-          "icon": "$(list-tree)"
-        },
-        {
-          "id": "visbal-debug-console",
-          "name": "Debug Console",
-          "type": "webview"
-        },
-        {
-          "id": "visbal-test-results",
-          "name": "Test Results",
-          "type": "webview"
         }
       ],
       "testExplorerContainer": [
@@ -139,6 +94,11 @@
           "type": "webview",
           "id": "visbal-log",
           "name": "Log Analyzer"
+        },
+        {
+          "id": "logTreeView",
+          "name": "Log Tree",
+          "type": "tree"
         }
       ],
       "visbal-soql-container": [
@@ -157,6 +117,12 @@
       ]
     },
     "commands": [
+      {
+        "command": "visbal.clearConsole",
+        "title": "Clear Console",
+        "category": "Visbal",
+        "icon": "$(clear-all)"
+      },
       {
         "command": "visbal-ext.refreshVisbalLog",
         "title": "Refresh Visbal Log",
@@ -202,46 +168,8 @@
     "menus": {
       "view/title": [
         {
-          "command": "visbal-ext.refreshVisbalLog",
-          "when": "view == visbal-log",
+          "command": "visbal.clearConsole",
           "group": "navigation"
-        },
-        {
-          "command": "visbal.fetchLogsViaRestApi",
-          "when": "view == visbal-log",
-          "group": "navigation"
-        },
-        {
-          "command": "visbal-ext.showDebugConsole",
-          "when": "view == visbal-debug-console",
-          "group": "navigation"
-        },
-        {
-          "command": "visbal-ext.showTestResults",
-          "when": "view == visbal-test-results",
-          "group": "navigation"
-        }
-      ],
-      "commandPalette": [
-        {
-          "command": "visbal.fetchLogsViaRestApi",
-          "group": "Salesforce"
-        },
-        {
-          "command": "visbal.executeApexRest",
-          "group": "Salesforce"
-        },
-        {
-          "command": "visbal-ext.showVisbalSoql",
-          "when": "workspaceHasVisbalProject"
-        },
-        {
-          "command": "visbal-ext.showVisbalApex",
-          "when": "workspaceHasVisbalProject"
-        },
-        {
-          "command": "visbal-ext.showVisbalLog",
-          "when": "workspaceHasVisbalProject"
         }
       ]
     }
