creating the APEX panel with sample

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "onView:testClassExplorerView",
     "onView:visbal-log",
     "onView:visbal-soql",
-    "onView:visbal-apex",
+    "onView:visbal-sample",
     "workspaceContains:**/.sfdx/sfdx-config.json",
     "workspaceContains:**/sfdx-project.json"
   ],
@@ -60,9 +60,9 @@
           "icon": "$(database)"
         },
         {
-          "id": "visbal-apex-container",
-          "title": "Visbal Apex",
-          "icon": "$(symbol-method)"
+          "id": "visbal-sample-container",
+          "title": "Visbal Sample",
+          "icon": "$(beaker)"
         }
       ],
       "activitybar": [
@@ -108,11 +108,11 @@
           "name": "SOQL Query"
         }
       ],
-      "visbal-apex-container": [
+      "visbal-sample-container": [
         {
           "type": "webview",
-          "id": "visbal-apex",
-          "name": "Execute Anonymous Apex"
+          "id": "visbal-sample",
+          "name": "Sample Panel"
         }
       ]
     },
@@ -150,8 +150,8 @@
         "category": "Visbal"
       },
       {
-        "command": "visbal-ext.showVisbalApex",
-        "title": "Show Visbal Apex",
+        "command": "visbal-ext.showVisbalSample",
+        "title": "Show Visbal Sample",
         "category": "Visbal"
       },
       {
