--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/yourusername/visbal-ext.git"
   },
   "scripts": {
-    "clean": "rimraf dist out *.vsix",
+    "clean": "if exist dist rd /s /q dist && if exist out rd /s /q out && if exist *.vsix del *.vsix",
     "build": "tsc",
     "watch": "tsc -w",
     "package": "vsce package",
@@ -179,6 +179,31 @@
           "group": "navigation"
         }
       ]
+    },
+    "configuration": {
+      "title": "Visbal Extension",
+      "properties": {
+        "visbal.modules.testExplorer.enabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable/disable the Test Explorer module"
+        },
+        "visbal.modules.logAnalyzer.enabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable/disable the Log Analyzer module"
+        },
+        "visbal.modules.soqlQuery.enabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable/disable the SOQL Query module"
+        },
+        "visbal.modules.samplePanel.enabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable/disable the Sample Panel module"
+        }
+      }
     }
   },
   "devDependencies": {
