GOOD 1.06 log details available , paralel and download log

--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
           "id": "testRunResults",
           "name": "Running Tasks",
           "type": "tree",
-          "visibility": "visible"
+          "visibility": "visible",
+          "hideMenus": true
         },
         {
           "id": "visbal-test-summary",
