--- a/package.json
+++ b/package.json
@@ -256,5 +256,9 @@
   "resolutions": {
     "@vscode/codicons": "^0.0.35",
     "follow-redirects": "^1.15.6"
-  }
+  },
+  "files": [
+    "out/**/*",
+    ".visbal/templates/**/*"
+  ]
 }
