--- a/package.json
+++ b/package.json
@@ -234,6 +234,16 @@
           "type": "boolean",
           "default": true,
           "description": "Enable/disable the Sample Panel module"
+        },
+        "visbalExt.logging.saveToFile": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable or disable saving logs and errors to a file."
+        },
+        "visbalExt.logging.displayInConsole": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable or disable displaying logs and errors in the console."
         }
       }
     }
