--- a/package.json
+++ b/package.json
@@ -235,25 +235,36 @@
           "default": true,
           "description": "Enable/disable the Sample Panel module"
         },
-        "visbalExt.logging.saveToFile": {
+        "visbal.logging.saveToFile": {
           "type": "boolean",
           "default": true,
           "description": "Enable or disable saving logs and errors to a file."
         },
-        "visbalExt.logging.displayInConsole": {
+        "visbal.logging.displayInConsole": {
           "type": "boolean",
           "default": true,
           "description": "Enable or disable displaying logs and errors in the console."
         },
-        "visbalExt.logging.deleteErrorLogsOlderThan": {
+        "visbal.logging.deleteErrorLogsOlderThan": {
           "type": "number",
           "default": 1,
           "description": "Delete error logs older than this number of days"
         },
-        "visbalExt.logging.debugMaxLength": {
+        "visbal.logging.debugMaxLength": {
           "type": "number",
           "default": 250,
           "description": "Debug Max Length"
+        },
+        "visbal.apexTest.manualExecution": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable/disable manual test execution"
+        }
+        ,
+        "visbal.apexLog.defaultView": {
+          "type": "string",
+          "default": "user_debug",
+          "description": "default view for log analyzer"
         }
       }
     }
